Fix text overflow for list item

--- a/src/css/includes/list.scss
+++ b/src/css/includes/list.scss
@@ -234,6 +234,10 @@
 .list-item-title {
 	float: left;
 	padding: 12px 12px;
+	overflow: hidden;
+	width: 470px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 .list-item-right {
 	float: right;
