--- a/src/css/includes/mixins.scss
+++ b/src/css/includes/mixins.scss
@@ -182,9 +182,9 @@ PIXELS  EMS
 // Follows Material Design (animation) principles, GOOGLE (TM)
 
 .tsin {
-	-webkit-transition: all 200ms cubic-bezier(0.1, 0.885, 0.2, 1.1);
-	-moz-transition: all 200ms cubic-bezier(0.1, 0.885, 0.2, 1.1);
-	transition: all 200ms cubic-bezier(0.1, 0.885, 0.07, 1.1);
+	-webkit-transition: all 300ms cubic-bezier(0.1, 0.885, 0.2, 1.1);
+	-moz-transition: all 300ms cubic-bezier(0.1, 0.885, 0.2, 1.1);
+	transition: all 300ms cubic-bezier(0.1, 0.885, 0.07, 1.1);
 }
 .tsout {
 	-webkit-transition: all 150ms cubic-bezier(0.895, 0.03, 0.685, 0.22);
